@@ -175,6 +175,14 @@ int ST_SetKey( ST_TIFF *st, int tag, int count, int st_type, void *data )
     int i, item_size = ST_TypeSize( st_type );
 
 /* -------------------------------------------------------------------- */
+/*      We should compute the length if we were not given a count       */
+/* -------------------------------------------------------------------- */
+    if (count == 0 && st_type == STT_ASCII ) 
+    {
+        count = strlen((char*)data);
+    }
+
+/* -------------------------------------------------------------------- */
 /*      If we already have a value for this tag, replace it.            */
 /* -------------------------------------------------------------------- */
     for( i = 0; i < st->key_count; i++ )
